# mittagleffler

./: .gitignore  .readthedocs.yml  Cargo.toml  Makefile  README.md  README.rst  REUSE.toml  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.cargo/: config.toml
.ci/: requirements-build.in  requirements-build.txt  requirements-test.txt
.github/workflows/: CI.yml  ci.yml  wheels.yml
.reuse/: dep5
benches/: bench.rs  bench_matlab.m  bench_python.py
python/: CHANGELOG.rst  Cargo.toml  Makefile  README.rst  justfile  pyproject.toml  requirements-test.txt  requirements.txt
python/bindings/: lib.rs
python/docs/: conf.py  index.rst
python/mittagleffler/: __init__.py
python/src/pymittagleffler/: __init__.py  _bindings.pyi
python/tests/: test_mittag_leffler.py
scripts/: generate-mathematica-results.py  mittag-leffler-accuracy.py  mittag-leffler-function.py
src/: garrappa.rs  lib.rs  ml_series.rs  special.rs
tests/: test_mittag_leffler.rs  test_mittagleffler.py
