[package]
name = "mittagleffler"
version = "0.1.0"
authors = ["Alexandru Fikl <alexfikl@gmail.com>"]
edition = "2021"
description = "High performance implementations of the Mittag-Leffler function"
readme = "README.rst"
homepage = "https://github.com/alexfikl/mittagleffler"
license-file = "LICENSES/MIT.txt"

[lib]
name = "mittagleffler"
crate-type = ["cdylib"]

[dependencies]
num = { version = "0.4" }
special = { version = "0.11" }
