[build-system]
build-backend = "maturin"
requires = [
    "maturin>=1.6",
    "numpy",
]

[project]
name = "pymittagleffler"
version = "0.1.0"
description = "High performance implementation of the Mittag-Leffler function"
readme = "README.rst"
keywords = [
    "fractional-calculus",
    "special-functions",
]
license = { text = "MIT" }
maintainers = [ { name = "Alexandru Fikl", email = "alexfikl@gmail.com" } ]
authors = [ { name = "Alexandru Fikl", email = "alexfikl@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=2",
]
optional-dependencies.dev = [
    "mypy",
    "pyproject-fmt",
    "pytest",
    "reuse",
    "ruff",
    "typos",
    "uv",
]
urls = { repository = "https://github.com/alexfikl/mittagleffler" }

[tool.maturin]
module-name = "pymittagleffler._bindings"
python-source = "src"
features = [ "pyo3/extension-module" ]
strip = true

[tool.pytest]
testpaths = [ "tests" ]
cache_dir = ".pytest-cache"
