[build-system]
build-backend = "maturin"
requires = [
    "maturin>=1.6",
    "numpy",
]

[project]
name = "pymittagleffler"
version = "0.1.0"
description = "High performance implementation of the Mittag-Leffler function"
keywords = [
    "fractional-calculus",
    "special-functions",
]
license = { text = "MIT" }
maintainers = [ { name = "Alexandru Fikl", email = "alexfikl@gmail.com" } ]
authors = [ { name = "Alexandru Fikl", email = "alexfikl@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=2",
]
optional-dependencies.dev = [
    "mypy",
    "pyproject-fmt",
    "pytest",
    "reuse",
    "ruff",
    "typos",
    "uv",
]
urls = { repository = "https://github.com/alexfikl/mittagleffler" }

[tool.maturin]
manifest-path = "Cargo.toml"
profile = "release"
strip = true

bindings = "pyo3"
module-name = "pymittagleffler._bindings"
python-source = "src"

[tool.pytest]
testpaths = [ "tests" ]
cache_dir = ".pytest-cache"
addopts = [
    "-rswx",
    "--durations=25",
    "--capture=no",
    "--verbose",
]

[tool.mypy]
strict = true
python_version = "3.10"
hide_error_codes = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "scienceplots.*",
]
ignore_missing_imports = true
